--- a/src/app/catalog/catalog.component.html
+++ b/src/app/catalog/catalog.component.html
@@ -1,20 +1,27 @@
 <div class="p-4">
   <!-- Barre de recherche et sélection des catégories -->
-  <div class="flex items-center gap-4 mb-4">
-    <input
-      type="text"
-      placeholder="Rechercher un instrument..."
-      class="p-2 border rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500"
-      (input)="onSearchChange($event)"
-    />
-    <select
-      class="p-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
-      (change)="onCategoryChange($event)"
-    >
-      <option *ngFor="let category of categories" [value]="category.id">
-        {{ category.titre }}
-      </option>
-    </select>
+  <div class="flex flex-col sm:flex-row sm:items-center sm:gap-4 mb-4">
+    <!-- Barre de recherche -->
+    <div class="flex-grow sm:basis-3/4 mb-2 sm:mb-0">
+      <input
+        type="text"
+        placeholder="Rechercher un instrument..."
+        class="p-2 border rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500"
+        (input)="onSearchChange($event)"
+      />
+    </div>
+
+    <!-- Sélecteur des catégories -->
+    <div class="sm:basis-1/4">
+      <select
+        class="p-2 border rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500"
+        (change)="onCategoryChange($event)"
+      >
+        <option *ngFor="let category of categories" [value]="category.id">
+          {{ category.titre }}
+        </option>
+      </select>
+    </div>
   </div>
 
   <!-- Afficher le nombre d'instruments -->
@@ -55,7 +62,7 @@
         (click)="addToCart(instrument)"
         class="bg-blue-500 text-white p-2 rounded mt-3 w-full hover:bg-blue-600"
       >
-      Ajouter au panier{{ getItemCount(instrument.id || 0) > 0 ? ' (' + getItemCount(instrument.id || 0) + ')' : '' }}
+        Ajouter au panier{{ getItemCount(instrument.id || 0) > 0 ? ' (' + getItemCount(instrument.id || 0) + ')' : '' }}
       </button>
     </div>
   </div>
